serde-query/tests/compile-fail/conflicting_query.stderr
error: Conflicting query at '.foo'. One query expects a struct while another a sequence.
 --> tests/compile-fail/conflicting_query.rs:1:10
  |
1 | #[derive(serde_query::Deserialize)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `serde_query::Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Conflicting query at '.foo'. One query expects a value here while another a struct.
 --> tests/compile-fail/conflicting_query.rs:9:10
  |
9 | #[derive(serde_query::Deserialize)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `serde_query::Deserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
